# cosmo-file

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
scripts/: build_file_com.sh
src/cosmo_file/: __init__.py  __main__.py  _version.py
src/cosmo_file/data/: .gitignore
