[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmo-file"
dynamic = ["version"]
description = "Cosmopolitan builds of file(1), distributed as a Python package"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "cosmo-file contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/bjia56/cosmo-file"
Repository = "https://github.com/bjia56/cosmo-file"
Issues = "https://github.com/bjia56/cosmo-file/issues"

[project.scripts]
cosmo-file = "cosmo_file.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cosmo_file = ["data/file.*"]

[tool.setuptools.dynamic]
version = {attr = "cosmo_file.__version__"}
